GNOME Bugzilla – Bug 673865
bug in "web application" .desktop files
Last modified: 2012-04-11 13:12:24 UTC
web application .desktop files (as generated by epiphany versions 3.2 through 3.4.0.1) contain a line StartupNotification=true. according to the desktop file spec[1], it should be StartupNotify. implementations silently accept the unknown value, so i assume the notifications just won't work (i don't have such notifications in my setup, so i can't test it). desktop-file-validate complains: error: file contains key "StartupNotification" in group "Desktop Entry", but keys extending the format should start with "X-" [1] http://standards.freedesktop.org/desktop-entry-spec/1.0/ar01s05.html
Thank you, fixed in master and the 3.4 branch.