web-apps: s/StartupNotification/StartupNotify/ in desktop files

That's the correct name for the entry.

https://bugzilla.gnome.org/show_bug.cgi?id=673865